Update index.html - Remove video at top of page - Change picture Add About Me text and update current text - Remove Building Efficiency Together section - Move Cyber Sphere section - Remove Level Design section

--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
     </header>
 </div>
 
-<section class="row p-3 py-5 p-md-5 bg-pink">
+<!-- OLO Trailer -->
+
+<!-- <section class="row p-3 py-5 p-md-5 bg-pink">
     <div class="col-12 d-flex justify-content-center">
         <div class="embed-responsive embed-responsive-16by9 w-75">
             <iframe src="https://www.youtube.com/embed/nxxwpJ--DI0" 
@@ -62,34 +64,24 @@
             </iframe>
         </div>
     </div>
-</section>
-<section class="row p-3 py-5 p-md-5 bg-pink">
-    <div class="col-12 col-sm-12 col-md-6 col-lg-6 pb-5">
-        <img alt="A picture of Sam, brooding" class="img-fluid" id="sam-picture" src="img/sam.jpg">
-    </div>
-    <div class="col-12 col-sm-12 col-md-6 col-lg-6 text-white">
-        <p id="p-current-position" class="lead">Current Position: Game Designer on <a href="https://store.steampowered.com/app/1465550/One_Lonely_Outpost/">One Lonely Outpost</a> developed by  <a href="https://www.freedom.gg/">Freedom Games</a>.</p>
-        <ul>
-            <li>Arorian Studios: Game Designer 2020 - 2022 </li>
-            <li>Freedom Games: Game Designer 2022 - Present </li>
-            <li>Awarded a First Class Honours degree in Computer Games Design from Glasgow Caledonian University in 2020</li>
-            <li>Worked on a game called Novoslavia which currently has over 539,213 views</li>
-            <li>From 2014 – 2017 I worked as a journalist where I wrote news, reviews and previews from events such as EGX</li>
-        </ul>
-    </div>
-</section>
+</section> -->
 
 <section class="row p-3 py-5 p-md-5 bg-pink">
-    <div class="col-12 d-flex justify-content-center">
-        <div class="embed-responsive embed-responsive-16by9 w-75">
-            <iframe
-                    allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen
-                    class="embed-responsive-item"
-                    frameborder="0"
-                    src="https://www.youtube.com/embed/xpd3zTTSl1w">
-            </iframe>
-        </div>
+    <div class="col-12 col-sm-12 col-md-6 col-lg-6 pb-5">
+        <img alt="A picture of Sam, brooding" class="img-fluid" id="sam-picture" src="img/sam1.jpg">
+    </div>
+    <div class="col-12 col-sm-12 col-md-6 col-lg-6 text-white">
+        <h4>About Me</h4>
+        <p id="p-current-position" class="lead">
+            My name is Samuel Mcarthur-Mclean, I am a game designer from the UK currently living in Cambodia. After receiving a First Class Honours degree in Computer Games Design from Glasgow Caledonian University I went on to work for Aurorian Studios and then <a href="https://www.freedom.gg/">Freedom Games</a> as a designer on <a href="https://store.steampowered.com/app/1465550/One_Lonely_Outpost/">One Lonely Outpost</a>.
+        </p>
+        <ul>
+            <li>Freedom Games: Game Designer 2022 - 2023</li>
+            <li>Arorian Studios: Game Designer 2020 - 2022 </li>
+            <li>Awarded a First Class Honours degree in Computer Games Design from Glasgow Caledonian University in 2020</li>
+            <li>Worked on a game called Novoslavia which currently has over 559,000 views</li>
+            <li>From 2014 – 2017 I worked as a journalist where I wrote news, reviews and previews from events such as EGX</li>
+        </ul>
     </div>
 </section>
 
@@ -120,6 +112,22 @@
         </div>
     </div>
 </section>
+
+<section class="row p-3 py-5 p-md-5 bg-pink">
+    <div class="col-12 d-flex justify-content-center">
+        <div class="embed-responsive embed-responsive-16by9 w-75">
+            <iframe
+                    allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen
+                    class="embed-responsive-item"
+                    frameborder="0"
+                    src="https://www.youtube.com/embed/xpd3zTTSl1w">
+            </iframe>
+        </div>
+    </div>
+</section>
+
+
 <section
         class="row p-3 py-5 p-md-5 bg-white d-flex flex-column-reverse flex-sm-column-reverse flex-md-column-reverse flex-lg-row">
     <div class="col-12 col-sm-12 col-md-12 col-lg-6 pb-5">
@@ -146,7 +154,9 @@
         </a>
     </div>
 </section>
-<section class="row p-3 py-5 p-md-5 bg-pink">
+<!-- Building Efficiency Together -->
+
+<!-- <section class="row p-3 py-5 p-md-5 bg-pink">
     <div class="col-12 col-sm-12 col-md-12 col-lg-6 text-white">
         <h2 class="py-3">Building Efficiency Together</h2>
         <p>
@@ -167,21 +177,9 @@
             </iframe>
         </div>
     </div>
-</section>
-<section class="row p-3 py-5 p-md-5 bg-white d-flex flex-column-reverse flex-sm-column-reverse flex-md-column-reverse flex-lg-row">
-    <div class="col-12 col-sm-12 col-md-12 col-lg-6 pb-5 d-flex justify-content-center">
-        <img src="./img/heed.png" alt="Profile of a heed with a swirl">
-    </div>
-    <div class="col-12 col-sm-12 col-md-12 col-lg-6">
-        <h2 class="text-pink py-3">Approaches to Design</h2>
-        <p>
-            When designing games and mechanics I like to have the player learn subconsciously rather than being told
-            through text what to do. The ability for games to teach complex systems to players in an intuitive way is
-            something that interests me. For example, when it came to designing these elements in Cyber Sphere, symbols
-            and colours were used rather than text to explain what the players were meant to do.
-        </p>
-    </div>
-</section>
+</section> -->
+
+<!-- Showing Cyber Sphere at Resonate -->
 <section class="row p-3 py-5 p-md-5 bg-pink text-white">
     <div class="col-12 col-sm-12 col-md-12 col-lg-6 ">
         <div class="col-12 d-flex text-justify">
@@ -212,6 +210,23 @@
             </a>
         </div>
     </div>
+</section>
+
+<section class="row p-3 py-5 p-md-5 bg-white d-flex flex-column-reverse flex-sm-column-reverse flex-md-column-reverse flex-lg-row">
+    <div class="col-12 col-sm-12 col-md-12 col-lg-6 pb-5 d-flex justify-content-center">
+        <img src="./img/heed.png" alt="Profile of a heed with a swirl">
+    </div>
+    <div class="col-12 col-sm-12 col-md-12 col-lg-6">
+        <h2 class="text-pink py-3">Approaches to Design</h2>
+        <p>
+            When designing games and mechanics I like to have the player learn subconsciously rather than being told
+            through text what to do. The ability for games to teach complex systems to players in an intuitive way is
+            something that interests me. For example, when it came to designing these elements in Cyber Sphere, symbols
+            and colours were used rather than text to explain what the players were meant to do.
+        </p>
+    </div>
+</section>
+
 <!--    <div class="col-12 col-md-4 d-flex flex-column align-items-center my-3">-->
 <!--        <img alt="Image of convention attendees" class="img-fluid img-sizes img-thumbnail" src="img/resonate/1.png">-->
 <!--    </div>-->
@@ -227,8 +242,7 @@
 <!--        <img alt="Image of convention more attendees playing Cyber Sphere" class="img-fluid img-sizes img-thumbnail"-->
 <!--             src="img/resonate/4.png">-->
 <!--    </div>-->
-</section>
-<section class="row p-3 py-5 p-md-5 text-pink">
+<section class="row p-3 py-5 p-md-5 bg-pink text-white">
     <div class="col-12 d-flex justify-content-center">
         <h2 class="py-5">Other Projects</h2>
     </div>
@@ -297,7 +311,10 @@
         </a>
     </div>
 </section>
-<section class="row p-3 py-5 p-md-5 text-white bg-pink">
+
+<!-- Level Design -->
+
+<!-- <section class="row p-3 py-5 p-md-5 text-white bg-pink">
     <div class="col-12 d-flex justify-content-center">
         <h2 class="py-5">Level Design</h2>
     </div>
@@ -328,7 +345,7 @@
     <div class="col-12 col-md-6 col-lg-4 d-flex flex-column align-items-center my-3">
         <img alt="3D rendering exhibiting level design" class="img-fluid" src="img/level_design/6.png">
     </div>
-</section>
+</section> -->
 <footer id="footer" class="bg-dark text-left text-white">
     <div class="container p-4">
         <div class="row">
