Change link colours in Other Projects section to white

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 <!--        <img alt="Image of convention more attendees playing Cyber Sphere" class="img-fluid img-sizes img-thumbnail"-->
 <!--             src="img/resonate/4.png">-->
 <!--    </div>-->
-<section class="row p-3 py-5 p-md-5 bg-pink text-white">
+<section class="row p-3 py-5 p-md-5 bg-pink text-white" id="other-projects">
     <div class="col-12 d-flex justify-content-center">
         <h2 class="py-5">Other Projects</h2>
     </div>
