Implement Professional Experience section

--- a/index.html
+++ b/index.html
@@ -66,6 +66,36 @@
     </div>
 </section> -->
 
+<!-- Professional Experience -->
+
+<section class="row p-3 py-5 p-md-5 bg-pink">
+    <div class="col-12 col-sm-12 col-md-6 col-lg-6 text-white">
+        <h4>Professional Experience</h4>
+        <p id="p-current-position" class="lead">
+            Some of the major systems I was responsible for designing and overseeing implementation of were, terraforming, fishing, wildlife and the tutorial. After design approval, these were then handed off to the artists or programmers. I would be in constant contact to make sure everything was implemented to the design and worked as intended. From start to finish it was my responsibility. 
+        </p>
+        <ul>
+            <li>Documentation of new systems</li>
+            <li>Responsible for seeing mechanics from documentation to implementation</li>
+            <li>Working in Engine
+                <ul>
+                    <li>Data Entry</li>
+                    <li>Level Design</li>
+                    <li>Game Balancing</li>
+                </ul>
+            </li>
+            <li>Quest Design</li>
+            <li>Responsible for games tutorial</li>
+            
+        </ul>
+    </div>
+    <div class="col-12 col-sm-12 col-md-6 col-lg-6 pb-5">
+        <img alt="A picture of Sam, brooding" class="img-fluid" id="sam-picture" src="img/olo_grab.png">
+    </div>
+</section>
+
+<!-- About Me -->
+
 <section class="row p-3 py-5 p-md-5 bg-pink">
     <div class="col-12 col-sm-12 col-md-6 col-lg-6 pb-5">
         <img alt="A picture of Sam, brooding" class="img-fluid" id="sam-picture" src="img/sam1.jpg">
