--- a/index.html
+++ b/index.html
@@ -123,18 +123,18 @@
         <div class="row">
             <div class="col-md-6">
                 <ul class="list-unstyled">
+                    <li class="text-bold">Game Design</li>
                     <li>GML</li>
                     <li>Unity</li>
                     <li>GameMaker Studio 2</li>
                     <li>C#</li>
-                    <li>MonoGame</li>
                 </ul>
             </div>
             <div class="col-md-6">
                 <ul class="list-unstyled">
+                    <li>MonoGame</li>
                     <li>Unreal Engine</li>
                     <li>Photoshop</li>
-                    <li>GIMP</li>
                     <li>Aseprite</li>
                     <li>Creative Writing</li>
                 </ul>
