Replace picture with video in Professional Experience section

--- a/index.html
+++ b/index.html
@@ -52,20 +52,6 @@
     </header>
 </div>
 
-<!-- OLO Trailer -->
-
-<!-- <section class="row p-3 py-5 p-md-5 bg-pink">
-    <div class="col-12 d-flex justify-content-center">
-        <div class="embed-responsive embed-responsive-16by9 w-75">
-            <iframe src="https://www.youtube.com/embed/nxxwpJ--DI0" 
-                title="One Lonely Outpost Early Access Trailer | Freedom Games"
-                frameborder="0" 
-                allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-            </iframe>
-        </div>
-    </div>
-</section> -->
-
 <!-- Professional Experience -->
 
 <section class="row p-3 py-5 p-md-5 bg-pink">
@@ -89,8 +75,8 @@
             
         </ul>
     </div>
-    <div class="col-12 col-sm-12 col-md-6 col-lg-6 pb-5">
-        <img alt="A picture of Sam, brooding" class="img-fluid" id="sam-picture" src="img/olo_grab.png">
+    <div class="col-12 col-sm-12 col-md-6 col-lg-6 embed-responsive embed-responsive-16by9">
+            <video controls poster="/img/olo_grab.jpg" src="/video/olo_video.mp4" class="px-2"></video>
     </div>
 </section>
 
@@ -186,30 +172,6 @@
         </a>
     </div>
 </section>
-<!-- Building Efficiency Together -->
-
-<!-- <section class="row p-3 py-5 p-md-5 bg-pink">
-    <div class="col-12 col-sm-12 col-md-12 col-lg-6 text-white">
-        <h2 class="py-3">Building Efficiency Together</h2>
-        <p>
-            I did everything from the design, art and programming for this project. This was created as a game to show
-            how buildings can be used more efficiently to save energy. It was a tower management game that allows for
-            upgrades to a building showing its stats before and after highlighting what needs improved and the money
-            saved by making energy efficient. I tried to give it a vibrant look to draw people into the game.
-        </p>
-    </div>
-    <div class="col-12 col-sm-12 col-md-12 col-lg-6 pb-5">
-        <div class="embed-responsive embed-responsive-16by9">
-            <iframe
-                    allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen
-                    class="embed-responsive-item py-3"
-                    frameborder="0"
-                    src="https://www.youtube.com/embed/e_vh_g9HUfQ">
-            </iframe>
-        </div>
-    </div>
-</section> -->
 
 <!-- Showing Cyber Sphere at Resonate -->
 <section class="row p-3 py-5 p-md-5 bg-pink text-white">
@@ -259,21 +221,6 @@
     </div>
 </section>
 
-<!--    <div class="col-12 col-md-4 d-flex flex-column align-items-center my-3">-->
-<!--        <img alt="Image of convention attendees" class="img-fluid img-sizes img-thumbnail" src="img/resonate/1.png">-->
-<!--    </div>-->
-<!--    <div class="col-12 col-md-4 d-flex flex-column align-items-center my-3">-->
-<!--        <img alt="Image of convention attendees playing Cyber Sphere" class="img-fluid img-sizes img-thumbnail"-->
-<!--             src="img/resonate/2.png">-->
-<!--    </div>-->
-<!--    <div class="col-12 col-md-4 d-flex flex-column align-items-center my-3">-->
-<!--        <img alt="Image of convention more attendees playing Cyber Sphere" class="img-fluid img-sizes img-thumbnail"-->
-<!--             src="img/resonate/3.png">-->
-<!--    </div>-->
-<!--    <div class="col-12 col-md-4 d-flex flex-column align-items-center my-3">-->
-<!--        <img alt="Image of convention more attendees playing Cyber Sphere" class="img-fluid img-sizes img-thumbnail"-->
-<!--             src="img/resonate/4.png">-->
-<!--    </div>-->
 <section class="row p-3 py-5 p-md-5 bg-pink text-white" id="other-projects">
     <div class="col-12 d-flex justify-content-center">
         <h2 class="py-5">Other Projects</h2>
@@ -344,40 +291,6 @@
     </div>
 </section>
 
-<!-- Level Design -->
-
-<!-- <section class="row p-3 py-5 p-md-5 text-white bg-pink">
-    <div class="col-12 d-flex justify-content-center">
-        <h2 class="py-5">Level Design</h2>
-    </div>
-    <div class="col-12 d-flex justify-content-center">
-        <p class="pb-5 px-5 mx-5">
-            The 3D city was inspired by modern day cities Asia. It was meant to be somewhere off the beaten
-            path, down an alley somewhere. Wires that criss-cross from building to building give it a lived in, worn out
-            feel. A hidden garden on the roof offers a place of relaxation from the street below. It was to be
-            somewhere that the player could just explore and discover little details; a peaceful, solitary experience.
-        </p>
-    </div>
-    <div class="col-12 col-md-6 col-lg-4 d-flex flex-column align-items-center my-3">
-        <img alt="3D rendering exhibiting level design" class="img-fluid" src="img/level_design/1.png">
-    </div>
-    <div class="col-12 col-md-6 col-lg-4 d-flex flex-column align-items-center my-3">
-        <img alt="3D rendering exhibiting level design" class="img-fluid" src="img/level_design/2.png">
-    </div>
-    <div class="col-12 col-md-6 col-lg-4 d-flex flex-column align-items-center my-3">
-        <img alt="3D rendering exhibiting level design" class="img-fluid" src="img/level_design/3.png">
-    </div>
-
-    <div class="col-12 col-md-6 col-lg-4 d-flex flex-column align-items-center my-3">
-        <img alt="3D rendering exhibiting level design" class="img-fluid" src="img/level_design/4.png">
-    </div>
-    <div class="col-12 col-md-6 col-lg-4 d-flex flex-column align-items-center my-3">
-        <img alt="3D rendering exhibiting level design" class="img-fluid" src="img/level_design/5.png">
-    </div>
-    <div class="col-12 col-md-6 col-lg-4 d-flex flex-column align-items-center my-3">
-        <img alt="3D rendering exhibiting level design" class="img-fluid" src="img/level_design/6.png">
-    </div>
-</section> -->
 <footer id="footer" class="bg-dark text-left text-white">
     <div class="container p-4">
         <div class="row">
