Somewhat fix margins on Resonate thumbnail section

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
         </div>
     </div>
     <div class="col-12 col-sm-12 col-md-12 col-lg-6">
-        <div class="gallery text-center">
+        <div class="gallery d-flex flex-wrap justify-content-center mx-5">
             <a href="img/resonate/cropped/1.jpg">
                 <img src="img/resonate/cropped/200/1.jpg" class="mx-1 my-1 img-thumbnail">
             </a>
