Fixed some grammatical errors

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                             </ul>
                         </li>
                         <li>Quest Design</li>
-                        <li>Responsible for games tutorial</li>
+                        <li>Responsible for the game's tutorial</li>
                         
                     </ul>
                 </div>
@@ -95,7 +95,7 @@
                     </p>
                     <ul>
                         <li>Freedom Games: Game Designer 2022 - 2023</li>
-                        <li>Arorian Studios: Game Designer 2020 - 2022 </li>
+                        <li>Aruorian Studios: Game Designer 2020 - 2022 </li>
                         <li>Awarded a First Class Honours degree in Computer Games Design from Glasgow Caledonian University in 2020</li>
                         <li>Worked on a game called Novoslavia which currently has over 559,000 views</li>
                         <li>From 2014 – 2017 I worked as a journalist where I wrote news, reviews and previews from events such as EGX</li>
