Another big, dumb commit. Closes #2

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<div
 			class="d-flex justify-content-center color-dark-grey back-coloumn-pink"
 		>
-			<div class="col-md-8 col-lg-8 mx-0">
+			<div class="col-md-8 col-lg-10 mx-0">
 				<div class="row">
 					<header
 						class="col-12 d-flex flex-column justify-content-left text-pink"
@@ -221,7 +221,6 @@
 								</li>
 							</ul>
 						</div>
-						<!-- <div class="col-6 col-sm-12 col-md-6 col-lg-6 text-white"> -->
 					</div>
 				</section>
 
@@ -277,15 +276,10 @@
 							<li>Responsible for the game's tutorial</li>
 						</ul>
 					</div>
-					<div
-						class="col-12 col-sm-12 col-md-6 col-lg-6 embed-responsive embed-responsive-16by9"
-					>
-						<video
-							controls
-							poster="/img/olo_grab.jpg"
-							src="/video/olo_video.mp4"
-							class="px-2"
-						></video>
+					<div class="col-12 col-sm-12 col-md-12 col-lg-6">
+                        <video controls poster="/img/olo_grab.jpg" class="video-player embed-responsive">
+                            <source src="/video/olo_video.mp4" type="video/mp4">
+                        </video>
 					</div>
 				</section>
 
@@ -310,19 +304,8 @@
 
 				<section
 					class="row p-3 py-5 p-md-5 bg-pink text-white d-flex flex-column-reverse flex-sm-column-reverse flex-md-column-reverse flex-lg-row">
-					<div class="col-12 col-sm-12 col-md-12 col-lg-6 pb-5">
-						<div class="embed-responsive embed-responsive-16by9">
-							<iframe
-								allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-								allowfullscreen
-								class="embed-responsive-item py-3"
-								frameborder="0"
-								src="https://www.youtube.com/embed/G0hevY-0wGU"
-							>
-							</iframe>
-						</div>
-					</div>
-					<div class="col-12 col-sm-12 col-md-12 col-lg-6">
+
+					<div class="col-12 col-sm-12 col-md-12 col-lg-12">
 						<h2 class="text-white py-3">Cyber Sphere</h2>
 						<p>
 							This is a game I that I worked as a designer on. Our Client - a
@@ -333,18 +316,30 @@
 							events, which led to us being given the chance to demo it as
 							Scotland’s biggest gaming event, Resonate.
 						</p>
-
-						<a
-							href="https://samuel-mcarthur-mclean.itch.io/"
-							class="d-flex justify-content-left pt-3"
-						>
-							<img
-								src="img/itch.svg"
-								alt="Link to games Itch.io page"
-								class="img-fluid w-25"
-							/>
-						</a>
-                        <!-- There should be an entire playing video right here. Where has it gone? -->
+                        <div class="col-12 col-sm-12 col-md-12 col-lg-12 pb-5">
+                            <div class="embed-responsive embed-responsive-16by9">
+                                <iframe
+                                    allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen
+                                    class="embed-responsive-item py-3"
+                                    frameborder="0"
+                                    src="https://www.youtube.com/embed/G0hevY-0wGU"
+                                >
+                                </iframe>
+                            </div>
+                            <div>
+                                <a
+                                href="https://samuel-mcarthur-mclean.itch.io/"
+                                class="pt-3 d-flex justify-content-center"
+                            >
+                                <img
+                                    src="img/itch.svg"
+                                    alt="Link to games Itch.io page"
+                                    class="img-fluid w-25"
+                                />
+                            </a>
+                            </div>
+                        </div>
 					</div>
 				</section>
 
@@ -366,37 +361,8 @@
 							</p>
 						</div>
 					</div>
+                    <!-- Resonate slideshow -->
 					<div class="col-12 col-sm-12 col-md-12 col-lg-6">
-						<!-- <div class="gallery d-flex flex-wrap justify-content-center mx-5">
-							<a href="img/resonate/cropped/1.jpg">
-								<img
-									src="img/resonate/cropped/200/1.jpg"
-									class="mx-1 my-1 img-thumbnail"
-								/>
-							</a>
-							<a href="img/resonate/cropped/2.jpg">
-								<img
-									src="img/resonate/cropped/200/2.jpg"
-									class="mx-1 my-1 img-thumbnail"
-								/>
-							</a>
-							<a href="img/resonate/cropped/3.jpg">
-								<img
-									src="img/resonate/cropped/200/3.jpg"
-									class="mx-1 my-1 img-thumbnail"
-								/>
-							</a>
-							<a href="img/resonate/cropped/4.jpg">
-								<img
-									src="img/resonate/cropped/200/4.jpg"
-									class="mx-1 my-1 img-thumbnail"
-								/>
-							</a>
-						</div> -->
-
-
-
-                        <!-- new code -->
                         <div class="slider-container">
                             <div class="image-container">
                              <img class="slider-image" src="/img/resonate/1.png" alt="">
