Fixed misspelt word. Closes #3

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 						</p>
 						<ul class="list-unstyled tools-list text-bold">
 							<li>Freedom Games: Game Designer 2022 - 2023</li>
-							<li>Aruorian Studios: Game Designer 2020 - 2022</li>
+							<li>Aurorian Studios: Game Designer 2020 - 2022</li>
 							<li>
 								Awarded a First Class Honours degree in Computer Games Design
 								from Glasgow Caledonian University in 2020
