Remove unnecessary details in index.html

--- a/index.html
+++ b/index.html
@@ -118,14 +118,7 @@
                         <ul class="list-unstyled tools-list text-bold">
                             <li>Game Design</li>
                             <li>Creative Writing</li>
-                            <li>working:
-                                <ul>
-                                    <li>Remotely</li>
-                                    <li>in a team</li>
-                                    <li>in a fast paced environment</li>
-                                </ul>
-                            </li>
-                            <li>I can handle heavy workloads and still find time to develop and learn</li>
+                            <li>Working Remotely</li>
                         </ul>
 					</div>
                     <div class="col-4 col-sm-12 col-md-6 col-lg-4 pb-5 text-white">
@@ -250,6 +243,7 @@
 				<section class="row p-3 py-5 p-md-5 bg-pink">
 					<div class="col-12 col-sm-12 col-md-6 col-lg-6 text-white">
 						<h4>Professional Experience</h4>
+                        <h5 class="underline-text">Game Designer - One Lonely Outpost</h5>
 						<p id="p-current-position" class="lead">
 							Some of the major systems I was responsible for designing and
 							overseeing implementation of were, terraforming, fishing, wildlife
