--- a/index.html
+++ b/index.html
@@ -504,6 +504,40 @@
 					</div>
 				</section>
 
+				<!-- Level Design -->
+				<section class="row p-3 py-5 p-md-5 text-white bg-pink">
+					<div class="col-12 d-flex justify-content-center">
+						<h2 class="py-5">Level Design</h2>
+					</div>
+					<div class="col-12 d-flex justify-content-center">
+						<p class="pb-5 px-5 mx-5">
+							The 3D city was inspired by modern day cities Asia. It was meant to be somewhere off the beaten
+							path, down an alley somewhere. Wires that criss-cross from building to building give it a lived in, worn out
+							feel. A hidden garden on the roof offers a place of relaxation from the street below. It was to be
+							somewhere that the player could just explore and discover little details; a peaceful, solitary experience.
+						</p>
+					</div>
+					<div class="col-12 col-md-6 col-lg-4 d-flex flex-column align-items-center my-3">
+						<img alt="3D rendering exhibiting level design" class="img-fluid" src="img/level_design/1.png">
+					</div>
+					<div class="col-12 col-md-6 col-lg-4 d-flex flex-column align-items-center my-3">
+						<img alt="3D rendering exhibiting level design" class="img-fluid" src="img/level_design/2.png">
+					</div>
+					<div class="col-12 col-md-6 col-lg-4 d-flex flex-column align-items-center my-3">
+						<img alt="3D rendering exhibiting level design" class="img-fluid" src="img/level_design/3.png">
+					</div>
+				
+					<div class="col-12 col-md-6 col-lg-4 d-flex flex-column align-items-center my-3">
+						<img alt="3D rendering exhibiting level design" class="img-fluid" src="img/level_design/4.png">
+					</div>
+					<div class="col-12 col-md-6 col-lg-4 d-flex flex-column align-items-center my-3">
+						<img alt="3D rendering exhibiting level design" class="img-fluid" src="img/level_design/5.png">
+					</div>
+					<div class="col-12 col-md-6 col-lg-4 d-flex flex-column align-items-center my-3">
+						<img alt="3D rendering exhibiting level design" class="img-fluid" src="img/level_design/6.png">
+					</div>
+				</section>
+
 				<footer id="footer" class="bg-dark text-left text-white row">
 					<div class="container p-4">
 						<div class="row">
