Update email to avoid spam

--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
 							<div class="col-lg-3 col-md-12 mb-4 mb-md-0">
 								<h5 class="text-uppercase mb-0">Contact</h5>
 								<ul class="list-unstyled">
-									<li>smcarthurmclean@googlemail.com</li>
+									<li>smcarthurmclean(at)googlemail(dot)com</li>
 								</ul>
 							</div>
 						</div>
