Update index.html - Comment out old level design stuff - Add Béton Brut level design stuff

--- a/index.html
+++ b/index.html
@@ -507,10 +507,30 @@
 				<!-- Level Design -->
 				<section class="row p-3 py-5 p-md-5 text-white bg-pink">
 					<div class="col-12 d-flex justify-content-center">
-						<h2 class="py-5">Level Design</h2>
+						<h2 class="py-5">Béton Brut - Level Design</h2>
 					</div>
+					<!-- Béton Brut -->
+					<!-- <div class="col-12 d-flex justify-content-center">
+						<h3 class="py-2">Béton Brut</h3>
+					</div> -->
 					<div class="col-12 d-flex justify-content-center">
-						<p class="pb-5 px-5 mx-5">
+						<p class="pb-2 px-0 mx-5">
+							Inspired by Brutalist architecture and the impossible buildings of Étienne-Louis Boullée, Béton Brut has the player exploring an abandoned city. The game aims to capture isolation and uneasy spaces. The world has died and all the player can do is find a way out.
+						</p>
+					</div>
+					<div class="col-12 col-md-6 col-lg-4 d-flex flex-column align-items-center my-3">
+						<img alt="3D rendering exhibiting level design" class="img-fluid" src="img/level_design/level1.png">
+					</div>
+					<div class="col-12 col-md-6 col-lg-4 d-flex flex-column align-items-center my-3">
+						<img alt="3D rendering exhibiting level design" class="img-fluid" src="img/level_design/level2.png">
+					</div>
+					<div class="col-12 col-md-6 col-lg-4 d-flex flex-column align-items-center my-3">
+						<img alt="3D rendering exhibiting level design" class="img-fluid" src="img/level_design/level3.png">
+					</div>
+
+					<!-- Asian City -->
+					<!-- <div class="col-12 d-flex justify-content-center">
+						<p class="pb-2 px-2 mx-5">
 							The 3D city was inspired by modern day cities Asia. It was meant to be somewhere off the beaten
 							path, down an alley somewhere. Wires that criss-cross from building to building give it a lived in, worn out
 							feel. A hidden garden on the roof offers a place of relaxation from the street below. It was to be
@@ -535,7 +555,7 @@
 					</div>
 					<div class="col-12 col-md-6 col-lg-4 d-flex flex-column align-items-center my-3">
 						<img alt="3D rendering exhibiting level design" class="img-fluid" src="img/level_design/6.png">
-					</div>
+					</div> -->
 				</section>
 
 				<footer id="footer" class="bg-dark text-left text-white row">
