Replace Twitter branding with Bluesky branding

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<script src="https://kit.fontawesome.com/a91ed167c8.js" crossorigin="anonymous"></script>
+
 		<meta charset="UTF-8" />
 		<meta
 			content="width=device-width, initial-scale=1, shrink-to-fit=no"
@@ -52,9 +54,8 @@
 									<li class="nav-item">
 										<a
 											class="nav-link"
-											href="http://www.twitter.com/SMcarthurMclean"
-											><i class="text-pink bi bi-twitter"></i
-										></a>
+											href="https://bsky.app/profile/smcarthurmclean.bsky.social"
+											><i class="fa-brands fa-bluesky"></i></a>
 									</li>
 									<li class="nav-item">
 										<a class="nav-link" href="#footer"
@@ -581,9 +582,9 @@
 									</li>
 									<li>
 										<a
-											href="http://www.twitter.com/SMcarthurMclean"
+											href="https://bsky.app/profile/smcarthurmclean.bsky.social"
 											class="text-white"
-											>Twitter</a
+											>Bluesky</a
 										>
 									</li>
 									<li>
