--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 										<a
 											class="nav-link"
 											href="https://bsky.app/profile/smcarthurmclean.bsky.social"
-											><i class="fa-brands fa-bluesky"></i></a>
+											><i class="text-pink fa-brands fa-bluesky"></i></a>
 									</li>
 									<li class="nav-item">
 										<a class="nav-link" href="#footer"
