Make all image paths consistent and relevant

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                 <div
                     class="col-12 col-sm-12 col-md-12 col-lg-6 pb-5 d-flex justify-content-center"
                 >
-                    <img src="./img/heed.png" alt="Profile of a heed with a swirl" />
+                    <img src="./img/heed.png" alt="Profile of a heed with a swirl" class="img-fluid" />
                 </div>
                 <div class="col-12 col-sm-12 col-md-12 col-lg-6 text-pink">
                     <h2 class="py-3">Approaches to Design</h2>
