--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 			integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
 			rel="stylesheet"
 		/>
-		<link href="css/stylesheet.css" rel="stylesheet" type="text/css" />
+		<link href="./css/stylesheet.css" rel="stylesheet" type="text/css" />
 		<link
 			rel="stylesheet"
 			href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
 		/>
-		<link rel="stylesheet" href="css/baguetteBox.min.css" />
+		<link rel="stylesheet" href="./css/baguetteBox.min.css" />
 		<title>Sam McArthur-McLean - Portfolio</title>
 	</head>
 	<body>
@@ -76,7 +76,7 @@
 							alt="A picture of Sam, brooding"
 							class="img-fluid rounded-circle"
 							id="sam-picture"
-							src="img/sam2.jpg"
+							src="./img/sam2.jpg"
 						/>
 					</div>
 					<div class="col-12 col-sm-12 col-md-6 col-lg-6 text-white">
@@ -272,8 +272,8 @@
 						</ul>
 					</div>
 					<div class="col-12 col-sm-12 col-md-12 col-lg-6">
-                        <video controls poster="/img/olo_grab.jpg" class="video-player embed-responsive">
-                            <source src="/video/olo_video.mp4" type="video/mp4">
+                        <video controls poster="./img/olo_grab.jpg" class="video-player embed-responsive">
+                            <source src="./video/olo_video.mp4" type="video/mp4">
                         </video>
 					</div>
 				</section>
@@ -328,7 +328,7 @@
                                 class="pt-3 d-flex justify-content-center"
                             >
                                 <img
-                                    src="img/itch.svg"
+                                    src="./img/itch.svg"
                                     alt="Link to games Itch.io page"
                                     class="img-fluid w-25"
                                 />
@@ -360,10 +360,10 @@
 					<div class="col-12 col-sm-12 col-md-12 col-lg-6">
                         <div class="slider-container">
                             <div class="image-container">
-                             <img class="slider-image" src="/img/resonate/1.png" alt="">
-                             <img class="slider-image" src="/img/resonate/2.png" alt="">
-                             <img class="slider-image" src="/img/resonate/3.png" alt="">
-                              <img class="slider-image" src="/img/resonate/4.png" alt="">
+                             <img class="slider-image" src="./img/resonate/1.png" alt="">
+                             <img class="slider-image" src="./img/resonate/2.png" alt="">
+                             <img class="slider-image" src="./img/resonate/3.png" alt="">
+                              <img class="slider-image" src="./img/resonate/4.png" alt="">
                             </div>
                         </div>
 					</div>
@@ -382,7 +382,7 @@
 						<img
 							alt="Screenshot of Cyber Security game"
 							class="img-fluid"
-							src="img/other_projects/cyberSecurity.png"
+							src="./img/other_projects/cyberSecurity.png"
 						/>
 						<h3 class="my-3">
 							<a href="https://samuel-mcarthur-mclean.itch.io/cyber-security"
@@ -403,7 +403,7 @@
 						<img
 							alt="Screenshot of River Kings game"
 							class="img-fluid"
-							src="img/other_projects/riverKings.png"
+							src="./img/other_projects/riverKings.png"
 						/>
 						<h3 class="my-3"><a href="#">River Kings</a></h3>
 						<p>
@@ -418,7 +418,7 @@
 						<img
 							alt="Screenshot of Novoslavia game"
 							class="img-fluid"
-							src="img/other_projects/novoslavia.png"
+							src="./img/other_projects/novoslavia.png"
 						/>
 						<h3 class="my-3"><a href="">Novoslavia</a></h3>
 						<p>
@@ -440,7 +440,7 @@
 						<img
 							alt="Screenshot of Follow Me to the Dark game"
 							class="img-fluid"
-							src="img/other_projects/followMe.png"
+							src="./img/other_projects/followMe.png"
 						/>
 						<h3 class="my-3 text-pink">
 							<a
@@ -460,7 +460,7 @@
 						<img
 							alt="Screenshot of Super Scrap Bot game"
 							class="img-fluid"
-							src="img/other_projects/superScrapBot.PNG"
+							src="./img/other_projects/superScrapBot.PNG"
 						/>
 						<h3 class="my-3"><a href="#">Super Scrap Bot</a></h3>
 						<p>
@@ -474,7 +474,7 @@
 						<img
 							alt="Screenshot of Mutiny Aboard the Exodus game"
 							class="img-fluid"
-							src="img/other_projects/mutiny.png"
+							src="./img/other_projects/mutiny.png"
 						/>
 						<h3 class="my-3">
 							<a
@@ -497,7 +497,7 @@
 							class="d-flex justify-content-center"
 						>
 							<img
-								src="img/itch.svg"
+								src="./img/itch.svg"
 								alt="Link to games Itch.io page"
 								class="img-fluid w-25"
 							/>
@@ -520,13 +520,13 @@
 						</p>
 					</div>
 					<div class="col-12 col-md-6 col-lg-4 d-flex flex-column align-items-center my-3">
-						<img alt="3D rendering exhibiting level design" class="img-fluid" src="img/level_design/level1.png">
+						<img alt="3D rendering exhibiting level design" class="img-fluid" src="./img/level_design/level1.png">
 					</div>
 					<div class="col-12 col-md-6 col-lg-4 d-flex flex-column align-items-center my-3">
-						<img alt="3D rendering exhibiting level design" class="img-fluid" src="img/level_design/level2.png">
+						<img alt="3D rendering exhibiting level design" class="img-fluid" src="./img/level_design/level2.png">
 					</div>
 					<div class="col-12 col-md-6 col-lg-4 d-flex flex-column align-items-center my-3">
-						<img alt="3D rendering exhibiting level design" class="img-fluid" src="img/level_design/level3.png">
+						<img alt="3D rendering exhibiting level design" class="img-fluid" src="./img/level_design/level3.png">
 					</div>
 
 					<!-- Asian City -->
@@ -539,23 +539,23 @@
 						</p>
 					</div>
 					<div class="col-12 col-md-6 col-lg-4 d-flex flex-column align-items-center my-3">
-						<img alt="3D rendering exhibiting level design" class="img-fluid" src="img/level_design/1.png">
+						<img alt="3D rendering exhibiting level design" class="img-fluid" src="./img/level_design/1.png">
 					</div>
 					<div class="col-12 col-md-6 col-lg-4 d-flex flex-column align-items-center my-3">
-						<img alt="3D rendering exhibiting level design" class="img-fluid" src="img/level_design/2.png">
+						<img alt="3D rendering exhibiting level design" class="img-fluid" src="./img/level_design/2.png">
 					</div>
 					<div class="col-12 col-md-6 col-lg-4 d-flex flex-column align-items-center my-3">
-						<img alt="3D rendering exhibiting level design" class="img-fluid" src="img/level_design/3.png">
+						<img alt="3D rendering exhibiting level design" class="img-fluid" src="./img/level_design/3.png">
 					</div>
 				
 					<div class="col-12 col-md-6 col-lg-4 d-flex flex-column align-items-center my-3">
-						<img alt="3D rendering exhibiting level design" class="img-fluid" src="img/level_design/4.png">
+						<img alt="3D rendering exhibiting level design" class="img-fluid" src="./img/level_design/4.png">
 					</div>
 					<div class="col-12 col-md-6 col-lg-4 d-flex flex-column align-items-center my-3">
-						<img alt="3D rendering exhibiting level design" class="img-fluid" src="img/level_design/5.png">
+						<img alt="3D rendering exhibiting level design" class="img-fluid" src="./img/level_design/5.png">
 					</div>
 					<div class="col-12 col-md-6 col-lg-4 d-flex flex-column align-items-center my-3">
-						<img alt="3D rendering exhibiting level design" class="img-fluid" src="img/level_design/6.png">
+						<img alt="3D rendering exhibiting level design" class="img-fluid" src="./img/level_design/6.png">
 					</div> -->
 				</section>
 
@@ -623,11 +623,6 @@
 		integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
 		src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
 	></script>
-	<script src="js/baguetteBox.min.js" async></script>
-	<script>
-		window.addEventListener('load', function () {
-			baguetteBox.run('.gallery')
-		})
-	</script>
+	<script src="./js/baguetteBox.min.js" async></script>
 	<script src="./js/setDate.js"></script>
 </html>
