Change duplicated ID to class
Change h4 to h2

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 					</div>
 					<div class="col-12 col-sm-12 col-md-6 col-lg-6 text-white">
 						<h4>About Me</h4>
-						<p id="p-current-position" class="lead">
+						<p class="lead p-current-position">
 							My name is Samuel Mcarthur-Mclean, I am a game designer from the
 							UK currently living in Cambodia. After receiving a First Class
 							Honours degree in Computer Games Design from Glasgow Caledonian
@@ -243,9 +243,9 @@
 				<!-- Professional Experience -->
 				<section class="row p-3 py-5 p-md-5 bg-pink">
 					<div class="col-12 col-sm-12 col-md-6 col-lg-6 text-white">
-						<h4>Professional Experience</h4>
+						<h2>Professional Experience</h2>
                         <h5 class="underline-text">Game Designer - One Lonely Outpost</h5>
-						<p id="p-current-position" class="lead">
+						<p class="lead p-current-position">
 							Some of the major systems I was responsible for designing and
 							overseeing implementation of were, terraforming, fishing, wildlife
 							and the tutorial. After design approval, these were then handed
