Add alt text to images and remove commented-out code

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                             <li>
                                 <img
                                     src="/img/logos/csharp-svgrepo-com.svg"
-                                    alt=""
+                                    alt="C# logo."
                                     class="tool-icons"
                                 />
                                 C#
@@ -360,10 +360,10 @@
 					<div class="col-12 col-sm-12 col-md-12 col-lg-6">
                         <div class="slider-container">
                             <div class="image-container">
-                             <img class="slider-image" src="./img/resonate/1.png" alt="">
-                             <img class="slider-image" src="./img/resonate/2.png" alt="">
-                             <img class="slider-image" src="./img/resonate/3.png" alt="">
-                              <img class="slider-image" src="./img/resonate/4.png" alt="">
+                             <img class="slider-image" src="./img/resonate/1.png" alt="A photo showing booths at the Resonate event.">
+                             <img class="slider-image" src="./img/resonate/2.png" alt="A photo showing a group of people playing Cyber Sphere at the Resonate event.">
+                             <img class="slider-image" src="./img/resonate/3.png" alt="A photo showing a person playing Cyber Sphere at the Resonate event.">
+                              <img class="slider-image" src="./img/resonate/4.png" alt="A photo showing a large overhead display at the Resonate event.">
                             </div>
                         </div>
 					</div>
@@ -528,35 +528,6 @@
 					<div class="col-12 col-md-6 col-lg-4 d-flex flex-column align-items-center my-3">
 						<img alt="3D rendering exhibiting level design" class="img-fluid" src="./img/level_design/level3.png">
 					</div>
-
-					<!-- Asian City -->
-					<!-- <div class="col-12 d-flex justify-content-center">
-						<p class="pb-2 px-2 mx-5">
-							The 3D city was inspired by modern day cities Asia. It was meant to be somewhere off the beaten
-							path, down an alley somewhere. Wires that criss-cross from building to building give it a lived in, worn out
-							feel. A hidden garden on the roof offers a place of relaxation from the street below. It was to be
-							somewhere that the player could just explore and discover little details; a peaceful, solitary experience.
-						</p>
-					</div>
-					<div class="col-12 col-md-6 col-lg-4 d-flex flex-column align-items-center my-3">
-						<img alt="3D rendering exhibiting level design" class="img-fluid" src="./img/level_design/1.png">
-					</div>
-					<div class="col-12 col-md-6 col-lg-4 d-flex flex-column align-items-center my-3">
-						<img alt="3D rendering exhibiting level design" class="img-fluid" src="./img/level_design/2.png">
-					</div>
-					<div class="col-12 col-md-6 col-lg-4 d-flex flex-column align-items-center my-3">
-						<img alt="3D rendering exhibiting level design" class="img-fluid" src="./img/level_design/3.png">
-					</div>
-				
-					<div class="col-12 col-md-6 col-lg-4 d-flex flex-column align-items-center my-3">
-						<img alt="3D rendering exhibiting level design" class="img-fluid" src="./img/level_design/4.png">
-					</div>
-					<div class="col-12 col-md-6 col-lg-4 d-flex flex-column align-items-center my-3">
-						<img alt="3D rendering exhibiting level design" class="img-fluid" src="./img/level_design/5.png">
-					</div>
-					<div class="col-12 col-md-6 col-lg-4 d-flex flex-column align-items-center my-3">
-						<img alt="3D rendering exhibiting level design" class="img-fluid" src="./img/level_design/6.png">
-					</div> -->
 				</section>
 
 				<footer id="footer" class="bg-dark text-left text-white row">
