Add fallback message for unsupported video playback

--- a/index.html
+++ b/index.html
@@ -274,6 +274,7 @@
 					<div class="col-12 col-sm-12 col-md-12 col-lg-6">
                         <video controls poster="./img/olo_grab.jpg" class="video-player embed-responsive">
                             <source src="./video/olo_video.mp4" type="video/mp4">
+							<p>Your browser does not support the video tag.</p>
                         </video>
 					</div>
 				</section>
