Add meta description for improved SEO and clarity

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 		/>
 		<link rel="stylesheet" href="./css/baguetteBox.min.css" />
 		<title>Sam McArthur-McLean - Portfolio</title>
+        <meta name="description" content="Portfolio of Sam McArthur-McLean, showcasing skills, projects, and professional experience in game design and development." />
 	</head>
 	<body>
 		<!-- Banner -->
