Update meta tags for improved SEO and clarity

--- a/index.html
+++ b/index.html
@@ -24,8 +24,15 @@
 			href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
 		/>
 		<link rel="stylesheet" href="./css/baguetteBox.min.css" />
-		<title>Sam McArthur-McLean - Portfolio</title>
+		<title>Sam McArthur-McLean - Game Developer Portfolio</title>
         <meta name="description" content="Portfolio of Sam McArthur-McLean, showcasing skills, projects, and professional experience in game design and development." />
+		<meta name="keywords" content="game developer, portfolio, Sam McArthur-McLean, game design, programming, Unity, Godot">
+		<meta property="og:title" content="Sam McArthur-McLean - Game Developer Portfolio">
+		<meta property="og:description" content="Showcasing skills, projects, and professional experience in game design and development.">
+		<!-- TODO: Create a good OpenGraph banner image to place here -->
+		<meta property="og:image" content="https://yourdomain.com/img/og-image.jpg">
+		<meta property="og:type" content="website">
+		<meta name="bsky:card" content="summary_large_image">
 	</head>
 	<body>
 		<!-- Banner -->
