Fix outdated link

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 							UK currently living in Cambodia. After receiving a First Class
 							Honours degree in Computer Games Design from Glasgow Caledonian
 							University I went on to work for Aurorian Studios and then
-							<a href="https://www.freedom.gg/">indie.io (previously Freedom Games)</a> as a designer
+							<a href="https://www.indie.io/">indie.io (previously Freedom Games)</a> as a designer
 							on
 							<a
 								href="https://store.steampowered.com/app/1465550/One_Lonely_Outpost/"
